conformance/1.0.0/expected/errors/missing-reference-tilde.cdx
<ExpectedError category=~syntax reason=~gloss-syn-missing-reference/>
